--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^7.0.1",
     "proptypes": "^1.1.0",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-scripts": "5.0.0",
