--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "memoria",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://andrew00999.github.io/memoria/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
     "proptypes": "^1.1.0",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
