--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-paginate": "^8.1.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
