--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "proptypes": "^1.1.0",
     "react": "^17.0.2",
